<resources>
    <string name="app_name" translatable="false">Meditation Diary</string>
    <string name="label_meditationDateAndTime">Select date and time</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="time_format" translatable="false">hh:mm</string>
    <string name="notes">Meditation Notes</string>
    <string name="button_save">Save</string>

    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button" translatable="false">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
</resources>
