<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="yt.javi.meditationdiary.MainActivity">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_meditationDateAndTime"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.025"/>

    <TextView
            android:id="@+id/input_date"
            android:layout_width="92dp"
            android:layout_height="27dp"
            android:ems="10"
            android:hint="@string/date_format"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginLeft="16dp"/>

    <TextView
            android:id="@+id/input_time"
            android:layout_width="58dp"
            android:layout_height="27dp"
            android:ems="10"
            android:hint="@string/time_format"
            app:layout_constraintLeft_toRightOf="@+id/button_date"
            app:layout_constraintTop_toBottomOf="@id/textView"
            android:layout_marginTop="36dp"
            android:layout_marginStart="32dp"/>

    <ImageButton
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_image"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/input_date"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.061"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="ContentDescription"
            android:onClick="showDatePickerDialog"/>

    <ImageButton
            android:id="@+id/button_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time_image"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintLeft_toRightOf="@+id/input_time"
            app:layout_constraintHorizontal_bias="0.579"
            tools:ignore="ContentDescription"
            android:onClick="showTimePickerDialog"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_notes"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/button_time"
            app:layout_constraintLeft_toLeftOf="@id/input_date"
            android:hint="@string/notes"
            android:selectAllOnFocus="true"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:maxLines="10"
            android:gravity="top|start"
            android:scrollbars="vertical"/>

    <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="@id/input_notes"
            app:layout_constraintTop_toBottomOf="@id/input_notes"
            android:text="@string/button_save"
            android:drawableStart="@drawable/ic_save"
            android:onClick="saveMeditation"/>
</androidx.constraintlayout.widget.ConstraintLayout>
